# petscagent-bench

./: README.md  pyproject.toml
config/: green_agent_config.yaml  purple_agent_config.yaml
src/green_agent/: agent.py
src/metrics/: aggregation.py
