[project]
name = "petscagent-bench"
version = "0.1.0"
description = "Agentified benchmark for PETSc coding agents"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "a2a-sdk[http-server]>=0.3.8",
    "dotenv>=0.9.9",
    "fastmcp>=2.14.2",
    "litellm>=1.80.5",
    "openai>=2.8.1",
    "pathlib>=1.0.1",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
    "petsc-mcp-servers-clients @ git+https://gitlab.com/petsc/petsc_mcp_servers.git@add-claude-code-generator-server",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.metadata]
allow-direct-references = true
[tool.hatch.build.targets.wheel]
include = ["src/*"]
